--- a/app/styles.css
+++ b/app/styles.css
@@ -101,7 +101,13 @@ h1 {
 .result-meta {
   font-size: 0.8rem;
   color: #777;
-  margin-bottom: 4px;
+  margin-bottom: 10px;
+    font-weight:bold;
+    text-transform: capitalize;
+}
+
+.title-meta {
+    text-transform: capitalize;
 }
 
 /* Line-numbered rows */
@@ -208,3 +214,5 @@ body.lines-hidden .line-row {
 body.lines-hidden .line-num {
   display: none;
 }
+
+span {display: none}
